# speech

./: .gitignore  Makefile  README.md  audio_utils.py  bot.db  db.py  keyboards.py  main.py  pyproject.toml  requirements.txt  training.py  tts_engine.py
docs/: data_requirements.md  roadmap.md  training_guide.md
src/speech/: __init__.py  config.py  features.py  inference.py  logging.py  model.py  training.py
src/speech/data/: __init__.py  datasets.py  transforms.py  utils.py
tests/: test_audio_utils.py  test_db.py  test_inference.py  test_training.py  test_tts_processing.py
